--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Animation Performance | Startpage</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
+    <h1>Animation Demo</h1>
+    <p>
+        Diese Demo soll dir demonstrieren wie oft ein Browser ein Element rendern muss, wenn die Animation nicht optimal
+        gebaut wurde. Mach dazu folgendes:
+    </p>
+    <ol>
+        <li>Öffne diese Seite in Chrome</li>
+        <li>Öffne die Developer Tools (z.B. mit F12)</li>
+        <li>Klicke auf die drei Punkte oben rechts. Dort auf "More Tools" > "Rendering"</li>
+        <li>In dem neu geöffneten Fenster klicke auf die Optionen: "Paint flashing" (ganz oben).</li>
+        <li>Vergleiche wie oft und wann das Side-Menü hervorgehoben wird bei beiden Varianten.</li>
+    </ol>
+    <a href="index.html">Anleitung</a>
+    <a href="good_animation.html">Gute Animation</a>
+    <a href="bad_animation.html">Schlechte Animation</a>
 </body>
 </html>
