--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <li>In dem neu geöffneten Fenster klicke auf die Optionen: "Paint flashing" (ganz oben).</li>
         <li>Vergleiche wie oft und wann das Side-Menü hervorgehoben wird bei beiden Varianten.</li>
     </ol>
-    <a href="index.html">Anleitung</a>
+    <a href="">Anleitung</a>
     <a href="good_animation.html">Gute Animation</a>
     <a href="bad_animation.html">Schlechte Animation</a>
 </body>
