--- a/bad_animation.html
+++ b/bad_animation.html
@@ -26,7 +26,7 @@
 <body style="position: relative; width: 100%; height: 100%;">
     <div id="menu" class="close-menu">Menu</div>
     <button onclick="onbtn()" style="margin-left: 500px">Menü Toggle</button>
-    <a href="">Anleitung</a>
+    <a href="index.html">Anleitung</a>
     <a href="good_animation.html">Gute Animation</a>
     <a href="bad_animation.html">Schlechte Animation</a>
 </body>
