--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li>Öffne die Developer Tools (z.B. mit F12)</li>
         <li>Klicke auf die drei Punkte oben rechts. Dort auf "More Tools" > "Rendering"</li>
         <li>In dem neu geöffneten Fenster klicke auf die Optionen: "Paint flashing" (ganz oben).</li>
-        <li>Vergleiche wie oft und wann das Side-Menü hervorgehoben wird bei beiden Varianten.</li>
+        <li>Öffne auf beiden Varianten das Side-Menü und vergleiche wie oft und wo neu gerendert werden muss.</li>
     </ol>
     <a href="index.html">Anleitung</a>
     <a href="good_animation.html">Gute Animation</a>
