--- a/bad_animation.html
+++ b/bad_animation.html
@@ -3,15 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Animation Performance | Schlechte Animation</title>
+    <link rel="stylesheet" href="styles.css">
     <style>
-        #menu {
-            height: 100%;
-            width: 300px;
-            position: absolute;
-            margin-left: -310px;
-            background-color: indianred;
-            transition: margin-left 10s, transform 10s;
-        }
         .open-menu {
             margin-left: 0 !important;
         }
@@ -24,10 +17,17 @@
     </script>
 </head>
 <body style="position: relative; width: 100%; height: 100%;">
-    <div id="menu" class="close-menu">Menu</div>
-    <button onclick="onbtn()" style="margin-left: 500px">Menü Toggle</button>
-    <a href="index.html">Anleitung</a>
-    <a href="good_animation.html">Gute Animation</a>
-    <a href="bad_animation.html">Schlechte Animation</a>
+    <div id="menu">
+        <button onclick="onbtn()">Schließen</button>
+    </div>
+    <nav>
+        <a href="index.html">Anleitung</a>
+        <a href="good_animation.html">Gute Animation</a>
+        <a href="bad_animation.html">Schlechte Animation</a>
+    </nav>
+    <main>
+        <h1>Schlechte Animation</h1>
+        <button onclick="onbtn()">Klicke auf mich, um das Menü zu öffnen</button>
+    </main>
 </body>
 </html>
