--- a/good_animation.html
+++ b/good_animation.html
@@ -2,32 +2,32 @@
 <html lang="de" style="position: relative; width: 100%; height: 100%;">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles.css">
     <title>Animation Performance | Gute Animation</title>
-    <style>
-        #menu {
-            height: 100%;
-            width: 300px;
-            position: absolute;
-            margin-left: -310px;
-            background-color: indianred;
-            transition: margin-left 10s, transform 10s;
-        }
-        .open-menu {
-            transform: translateX(300px);
-        }
-    </style>
     <script>
         function onbtn() {
           var el = document.getElementById('menu');
           el.classList.toggle('open-menu');
         }
     </script>
+    <style>
+        .open-menu {
+            transform: translateX(300px);
+        }
+    </style>
 </head>
 <body style="position: relative; width: 100%; height: 100%;">
-    <div id="menu" class="close-menu">Menu</div>
-    <button onclick="onbtn()" style="margin-left: 500px">Menü Toggle</button>
-    <a href="index.html">Anleitung</a>
-    <a href="good_animation.html">Gute Animation</a>
-    <a href="bad_animation.html">Schlechte Animation</a>
+    <div id="menu">
+        <button onclick="onbtn()">Schließen</button>
+    </div>
+    <nav>
+        <a href="index.html">Anleitung</a>
+        <a href="good_animation.html">Gute Animation</a>
+        <a href="bad_animation.html">Schlechte Animation</a>
+    </nav>
+    <main>
+        <h1>Gute Animation</h1>
+        <button onclick="onbtn()">Klicke auf mich, um das Menü zu öffnen</button>
+    </main>
 </body>
 </html>
