--- a/good_animation.html
+++ b/good_animation.html
@@ -5,10 +5,24 @@
     <link rel="stylesheet" href="styles.css">
     <title>Animation Performance | Gute Animation</title>
     <script>
-        function onbtn() {
-          var el = document.getElementById('menu');
-          el.classList.toggle('open-menu');
-        }
+      function togglemenu() {
+        var el = document.getElementById('menu');
+        el.classList.toggle('open-menu');
+      }
+
+      function onbtnslow() {
+        var el = document.getElementById('menu');
+        el.classList.remove('menu-fast', 'menu-slow');
+        togglemenu();
+        el.classList.add('menu-slow');
+      }
+
+      function onbtnfast() {
+        var el = document.getElementById('menu');
+        el.classList.remove('menu-fast', 'menu-slow');
+        togglemenu();
+        el.classList.add('menu-fast');
+      }
     </script>
     <style>
         .open-menu {
@@ -17,17 +31,22 @@
     </style>
 </head>
 <body style="position: relative; width: 100%; height: 100%;">
-    <div id="menu">
-        <button onclick="onbtn()">Schließen</button>
+<div id="menu">
+    <button onclick="togglemenu()">Schließen</button>
+</div>
+<nav>
+    <a href="index.html">Anleitung</a>
+    <a href="good_animation.html">Gute Animation</a>
+    <a href="bad_animation.html">Schlechte Animation</a>
+</nav>
+<main>
+    <h1>Gute Animation</h1>
+    <div class="btn-wrapper">
+        <button onclick="onbtnslow()">Klicke auf mich, um das Menü langsam zu öffnen</button>
     </div>
-    <nav>
-        <a href="index.html">Anleitung</a>
-        <a href="good_animation.html">Gute Animation</a>
-        <a href="bad_animation.html">Schlechte Animation</a>
-    </nav>
-    <main>
-        <h1>Gute Animation</h1>
-        <button onclick="onbtn()">Klicke auf mich, um das Menü zu öffnen</button>
-    </main>
+    <div class="btn-wrapper">
+        <button onclick="onbtnfast()">Klicke auf mich, um das Menü schnell zu öffnen</button>
+    </div>
+</main>
 </body>
 </html>
