--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
             <li>Klicke auf die drei Punkte oben rechts. Dort auf "More Tools" > "Rendering"</li>
             <li>In dem neu geöffneten Fenster klicke auf die Optionen: "Paint flashing" (ganz oben).</li>
             <li>Öffne auf beiden Varianten das Side-Menü und vergleiche wie oft neu gerendert werden muss.</li>
+            <li>Öffne das "Performance" Fenster</li>
+            <li>Mach die CPU 6x langsamer und nimm die Webseite auf. Führe anschließend die Animation aus.</li>
+            <li>Vergleiche die Ergebnisse der beiden Seiten. Was sind die Unterschiede bei der Zusammenfassung? Wie sind die FPS?</li>
         </ol>
     </main>
 </body>
