--- a/good_animation.html
+++ b/good_animation.html
@@ -31,7 +31,7 @@
     </style>
 </head>
 <body style="position: relative; width: 100%; height: 100%;">
-<div id="menu">
+<div id="menu" class="transform-will-change">
     <button onclick="togglemenu()">Schließen</button>
 </div>
 <nav>
