--- a/index.html
+++ b/index.html
@@ -15,17 +15,31 @@
         <h1>Animation Demo</h1>
         <p>
             Diese Demo soll dir demonstrieren wie oft ein Browser ein Element rendern muss, wenn die Animation nicht optimal
-            gebaut wurde. Mach dazu folgendes:
+            gebaut wurde.
         </p>
+        <h2>FPS</h2>
+        <ol>
+            <li>Öffne diese Seite in Chrome</li>
+            <li>Öffne die Developer Tools (z.B. mit F12)</li>
+            <li>Öffne das "Performance" Fenster</li>
+            <li>Mach die CPU 6x langsamer und nimm die Webseite auf. Führe anschließend die Animation aus.</li>
+            <li>Schaue dir das Ergebnis der FPS an und vergleiche die gute und die schlechte Animation.</li>
+        </ol>
+        <h2>Rendering, Painting | Performance</h2>
+        <ol>
+            <li>Öffne diese Seite in Chrome</li>
+            <li>Öffne die Developer Tools (z.B. mit F12)</li>
+            <li>Öffne das "Performance" Fenster</li>
+            <li>Mach die CPU 6x langsamer und nimm die Webseite auf. Führe anschließend die Animation aus.</li>
+            <li>Schaue dir die Zusammenfassung der Seite an. Vergleiche Rendering und Patining der beiden Animationen.</li>
+        </ol>
+        <h2>Rendering</h2>
         <ol>
             <li>Öffne diese Seite in Chrome</li>
             <li>Öffne die Developer Tools (z.B. mit F12)</li>
             <li>Klicke auf die drei Punkte oben rechts. Dort auf "More Tools" > "Rendering"</li>
             <li>In dem neu geöffneten Fenster klicke auf die Optionen: "Paint flashing" (ganz oben).</li>
             <li>Öffne auf beiden Varianten das Side-Menü und vergleiche wie oft neu gerendert werden muss.</li>
-            <li>Öffne das "Performance" Fenster</li>
-            <li>Mach die CPU 6x langsamer und nimm die Webseite auf. Führe anschließend die Animation aus.</li>
-            <li>Vergleiche die Ergebnisse der beiden Seiten. Was sind die Unterschiede bei der Zusammenfassung? Wie sind die FPS?</li>
         </ol>
     </main>
 </body>
