added animations developer tool

--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
             <li>In dem neu geöffneten Fenster klicke auf die Optionen: "Paint flashing" (ganz oben).</li>
             <li>Öffne auf beiden Varianten das Side-Menü und vergleiche wie oft neu gerendert werden muss.</li>
         </ol>
+        <h2>Animations</h2>
+        <ol>
+            <li>Öffne diese Seite in Chrome</li>
+            <li>Öffne die Developer Tools (z.B. mit F12)</li>
+            <li>Klicke auf die drei Punkte oben rechts. Dort auf "More Tools" > "Animations"</li>
+            <li>Lasse nun die Animationen abspielen. In dem Menü können sie erneut abgespielt werden.</li>
+            <li>Vergleiche wie flüssig die Animation bei verschiedenen Geschwindigkeiten ist.</li>
+        </ol>
     </main>
 </body>
 </html>
