--- a/good_animation.html
+++ b/good_animation.html
@@ -7,27 +7,32 @@
     <script>
       var openedViaJs = false;
       var menuBlocked = false;
+      var inJsToggle = false;
+      var inTransitionToggle = false;
 
       function transitionMenuToggle(open) {
-        if (menuBlocked) return;
+        if (menuBlocked || inJsToggle) return;
 
         var menu = document.getElementById('menu');
 
         if (open) {
+          inTransitionToggle = true;
           openedViaJs = false;
           menu.classList.add('open-menu');
           menu.classList.add('menu-transition');
         } else {
           menu.classList.remove('open-menu');
+          inTransitionToggle = false;
         }
       }
 
       function jsMenuToggle(open) {
-        if (menuBlocked) return;
+        if (menuBlocked || inTransitionToggle) return;
 
         var menu = document.getElementById('menu');
 
         if (open) {
+          inJsToggle = true;
           openedViaJs = true;
           menu.classList.remove('menu-transition');
         }
@@ -39,6 +44,7 @@
 
           if (transformInt === 300 && open || transformInt === 0 && !open) {
             menuBlocked = false;
+            inJsToggle = false;
           } else if (!open) {
             menu.style.transform = 'translateX(' + (transformInt - 1) + 'px)';
             window.requestAnimationFrame(frame);
