--- a/bad_animation.html
+++ b/bad_animation.html
@@ -8,6 +8,14 @@
         .open-menu {
             margin-left: 0 !important;
         }
+
+        button:hover {
+            background-color: #44596e;
+        }
+
+        nav a:hover {
+            background-color: #34495e;
+        }
     </style>
     <script>
       var openedViaJs = false;
@@ -70,7 +78,7 @@
       }
     </script>
 </head>
-<body style="position: relative; width: 100%; height: 100%;">
+<body>
 <div id="menu">
     <button onclick="closeMenu()">Schließen</button>
 </div>
