--- a/good_animation.html
+++ b/good_animation.html
@@ -52,7 +52,7 @@
             menu.style.transform = 'translateX(' + (transformInt + 1) + 'px)';
             window.requestAnimationFrame(frame);
           }
-        }
+        };
         window.requestAnimationFrame(frame);
       }
 
@@ -70,11 +70,54 @@
         .open-menu {
             transform: translateX(300px) !important;
         }
+
+        button:hover::after {
+            opacity: 0.1;
+        }
+
+        button::after {
+            content: "";
+            position: absolute;
+            left: 0;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            background-color: #fff;
+            opacity: 0;
+            transition: opacity 0.3s;
+        }
+
+        button {
+            /* removed transition: background-color */
+            position: relative;
+        }
+
+        nav > a {
+            position: relative;
+        }
+
+        nav > a::after {
+            content: "";
+            position: absolute;
+            left: 0;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            background-color: #fff;
+            opacity: 0;
+            transition: opacity 0.3s;
+        }
+
+        nav > a:hover::after {
+            opacity: 0.1;
+        }
     </style>
 </head>
-<body style="position: relative; width: 100%; height: 100%;">
+<body>
 <div id="menu" class="transform-will-change">
-    <button onclick="closeMenu()">Schließen</button>
+    <button onclick="closeMenu()">
+        Schließen
+    </button>
 </div>
 <nav>
     <a href="index.html">Anleitung</a>
@@ -84,7 +127,9 @@
 <main>
     <h1>Gute Animation</h1>
     <div class="btn-wrapper">
-        <button onclick="jsMenuToggle(true)">Klicke auf mich, um das Menü mit JS zu öffnen</button>
+        <button onclick="jsMenuToggle(true)">
+            Klicke auf mich, um das Menü mit JS zu öffnen
+        </button>
     </div>
     <div class="btn-wrapper">
         <button onclick="transitionMenuToggle(true)">Klicke auf mich, um das Menü via Transition zu öffnen</button>
