--- a/index.html
+++ b/index.html
@@ -4,51 +4,74 @@
     <meta charset="UTF-8">
     <title>Animation Performance | Startpage</title>
     <link rel="stylesheet" href="styles.css">
+
+    <style>
+        .hidden {
+            visibility: hidden;
+        }
+    </style>
+
+    <script>
+        function toggleSolutions() {
+          document.getElementById('solutions').classList.toggle('hidden');
+        }
+    </script>
 </head>
 <body>
-    <nav>
-        <a href="index.html">Anleitung</a>
-        <a href="good_animation.html">Gute Animation</a>
-        <a href="bad_animation.html">Schlechte Animation</a>
-    </nav>
-    <main>
-        <h1>Animation Demo</h1>
-        <p>
-            Diese Demo soll dir demonstrieren wie oft ein Browser ein Element rendern muss, wenn die Animation nicht optimal
-            gebaut wurde.
-        </p>
-        <h2>FPS</h2>
+<nav>
+    <a href="index.html">Anleitung</a>
+    <a href="good_animation.html">Gute Animation</a>
+    <a href="bad_animation.html">Schlechte Animation</a>
+</nav>
+<main>
+    <h1>Animation Demo</h1>
+    <div>
+        <p>Diese Demo soll dir demonstrieren wie oft ein Browser ein Element rendern muss, wenn die Animation nicht optimal
+            gebaut wurde.</p>
+
+        <p>Diese Seite ist nicht optimiert - genauso wie die Seite "Schlechte Animationen". Du kannst mit dem Button übliche Testschritte zur Überprüfung der Performance
+        von Animationen einblenden. Alternativ kannst du auch die beiden Seiten aus der Navigationsleiste selber
+        entdecken. Kannst du alle inperformanten Animationen finden? Hast du Ideen, warum die optimierte Seite
+        eine bessere Performance hat?</p>
+
         <ol>
             <li>Öffne diese Seite in Chrome</li>
-            <li>Öffne die Developer Tools (z.B. mit F12)</li>
+            <li>Öffne die Developer Tools (z.B. mit F12) und lege los.</li>
+        </ol>
+
+        <button onclick="toggleSolutions()">Testschritte zeigen/ verstecken</button>
+    </div>
+    <div id="solutions" class="hidden">
+        <h2>FPS</h2>
+        <ol>
             <li>Öffne das "Performance" Fenster</li>
             <li>Mach die CPU 6x langsamer und nimm die Webseite auf. Führe anschließend die Animation aus.</li>
             <li>Schaue dir das Ergebnis der FPS an und vergleiche die gute und die schlechte Animation.</li>
         </ol>
         <h2>Rendering, Painting | Performance</h2>
         <ol>
-            <li>Öffne diese Seite in Chrome</li>
-            <li>Öffne die Developer Tools (z.B. mit F12)</li>
             <li>Öffne das "Performance" Fenster</li>
             <li>Mach die CPU 6x langsamer und nimm die Webseite auf. Führe anschließend die Animation aus.</li>
-            <li>Schaue dir die Zusammenfassung der Seite an. Vergleiche Rendering und Patining der beiden Animationen.</li>
+            <li>Schaue dir die Zusammenfassung der Seite an. Vergleiche Rendering und Patining der beiden Animationen.
+            </li>
         </ol>
         <h2>Rendering</h2>
         <ol>
-            <li>Öffne diese Seite in Chrome</li>
-            <li>Öffne die Developer Tools (z.B. mit F12)</li>
             <li>Klicke auf die drei Punkte oben rechts. Dort auf "More Tools" > "Rendering"</li>
             <li>In dem neu geöffneten Fenster klicke auf die Optionen: "Paint flashing" (ganz oben).</li>
             <li>Öffne auf beiden Varianten das Side-Menü und vergleiche wie oft neu gerendert werden muss.</li>
         </ol>
         <h2>Animations</h2>
         <ol>
-            <li>Öffne diese Seite in Chrome</li>
-            <li>Öffne die Developer Tools (z.B. mit F12)</li>
             <li>Klicke auf die drei Punkte oben rechts. Dort auf "More Tools" > "Animations"</li>
             <li>Lasse nun die Animationen abspielen. In dem Menü können sie erneut abgespielt werden.</li>
             <li>Vergleiche wie flüssig die Animation bei verschiedenen Geschwindigkeiten ist.</li>
         </ol>
-    </main>
+        <h2>Buttons</h2>
+        <ol>
+            <li>Wende die bisherigen Schritte auf die Hover-Effekte der Buttons und der Links aus dem Menü an.</li>
+        </ol>
+    </div>
+</main>
 </body>
 </html>
