added missing styles

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
         .hidden {
             visibility: hidden;
         }
+        button:hover {
+            background-color: #44596e;
+        }
+
+        nav a:hover {
+            background-color: #34495e;
+        }
     </style>
 
     <script>
